ROC-8851 pba v2 junits