@@ -1,11 +1,9 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.legalrep;
 
-import com.google.common.collect.ImmutableMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.cmc.ccd.domain.CCDCase;
 import uk.gov.hmcts.cmc.ccd.domain.CaseEvent;
 import uk.gov.hmcts.cmc.ccd.mapper.CaseMapper;
 import uk.gov.hmcts.cmc.claimstore.repositories.ReferenceNumberRepository;
@@ -18,11 +16,9 @@ import uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.CallbackParams;
 import uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.CallbackType;
 import uk.gov.hmcts.cmc.claimstore.stereotypes.LogExecutionTime;
 import uk.gov.hmcts.cmc.claimstore.utils.CaseDetailsConverter;
-import uk.gov.hmcts.cmc.domain.models.Claim;
 import uk.gov.hmcts.cmc.domain.models.PaymentStatus;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 
 import java.time.LocalDate;
 import java.util.Arrays;
@@ -65,7 +61,7 @@ public class UpdateLegalRepClaimCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(CallbackType.ABOUT_TO_SUBMIT, this::updateLegalRepClaim);
+        return Map.of(CallbackType.ABOUT_TO_SUBMIT, this::updateLegalRepClaim);
     }
 
     @Override
@@ -80,9 +76,9 @@ public class UpdateLegalRepClaimCallbackHandler extends CallbackHandler {
 
     @LogExecutionTime
     private CallbackResponse updateLegalRepClaim(CallbackParams callbackParams) {
-        final CaseDetails caseDetails = callbackParams.getRequest().getCaseDetails();
-        CCDCase ccdCase = caseDetailsConverter.extractCCDCase(caseDetails);
-        Claim claim = caseDetailsConverter.extractClaim(callbackParams.getRequest().getCaseDetails());
+        final var caseDetails = callbackParams.getRequest().getCaseDetails();
+        var ccdCase = caseDetailsConverter.extractCCDCase(caseDetails);
+        var claim = caseDetailsConverter.extractClaim(callbackParams.getRequest().getCaseDetails());
         logger.info("Updating legal rep case for callback of type {}, claim with external id {}",
             callbackParams.getType(),
             claim.getExternalId());
@@ -91,7 +87,7 @@ public class UpdateLegalRepClaimCallbackHandler extends CallbackHandler {
             LocalDate responseDeadline = responseDeadlineCalculator.calculateResponseDeadline(issuedOn);
             String referenceNumber = referenceNumberRepository.getReferenceNumberForLegal();
 
-            Claim updatedClaim = claim.toBuilder()
+            var updatedClaim = claim.toBuilder()
                 .referenceNumber(referenceNumber)
                 .issuedOn(issuedOn)
                 .serviceDate(issuedOn.plusDays(5))
